WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196003
ASSERTION FAILED: !object || !isRuby(object->parent()) || is<RenderRubyRun>(*object) || (object->isInline() && (object->isBeforeContent() || object->isAfterContent())) || (object->isAnonymous() && is<RenderBlock>(*object) && object->style().display() == D
https://bugs.webkit.org/show_bug.cgi?id=196003
Summary
ASSERTION FAILED: !object || !isRuby(object->parent()) || is<RenderRubyRun>(*...
alan
Reported
2019-03-20 07:21:25 PDT
when loading LayoutTests/fast/ruby/crash-when-paginated-ruby.html
Attachments
Test reduction
(174 bytes, text/html)
2019-04-25 12:57 PDT
,
alan
no flags
Details
Patch
(5.47 KB, patch)
2019-10-30 11:16 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2019-03-22 10:45:44 PDT
This is a new test added on 2019-03-13. But have we not seen this on bots?
Ryan Haddad
Comment 2
2019-03-22 10:49:08 PDT
The test was added with
https://bugs.webkit.org/show_bug.cgi?id=195701
The test was skipped for all debug configs in
https://trac.webkit.org/changeset/243201/webkit
Alexey Proskuryakov
Comment 3
2019-03-22 17:01:44 PDT
So the test was landed skipped on Mac Debug right away.
Lucas Forschler
Comment 4
2019-03-25 10:20:34 PDT
<
rdar://problem/49219890
>
alan
Comment 5
2019-04-25 12:57:59 PDT
Created
attachment 368259
[details]
Test reduction
alan
Comment 6
2019-10-30 11:16:58 PDT
Created
attachment 382334
[details]
Patch
WebKit Commit Bot
Comment 7
2019-10-30 13:49:22 PDT
Comment on
attachment 382334
[details]
Patch Clearing flags on attachment: 382334 Committed
r251799
: <
https://trac.webkit.org/changeset/251799
>
WebKit Commit Bot
Comment 8
2019-10-30 13:49:24 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 9
2019-10-30 15:07:15 PDT
Nice!
alan
Comment 10
2019-10-30 15:08:40 PDT
(In reply to Alexey Proskuryakov from
comment #9
)
> Nice!
Thanks! I knew you were going to like it. :)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug